# DevSecOps-SCA-SAST

./: .pre-commit-config.yaml  .secrets.baseline  Integracao.py  README.md  gcloud.json  pyproject.toml  testeBD.py
.github/workflows/: sast.yaml  sca.yaml  secret-scanning.yaml
