[tool.poetry]
name = "devsecops-sca-sast"
version = "0.1.0"
description = ""
authors = ["SousaPedroso", "Menichini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
oauth2client = "^4.1.3"
gspread = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
